# meridian-loom

./: .gitignore  ARCHIVE_POLICY.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  benches.rs  docker-compose.yml  get_kernel_path  get_kernel_path.rs  loom.toml.example  patch.diff  patch_job.diff  test_compare  test_compare.rs  test_kernel.rs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml  rust.yml
.jules/: bolt.md  sentinel.md
crates/loom-cli/: Cargo.toml
crates/loom-cli/src/: main.rs
crates/loom-cli/src/commands/: action.rs  auth.rs  binding.rs  breed.rs  capability.rs  channel.rs  connect.rs  context.rs  deploy.rs  extension.rs  gateway.rs  heartbeat.rs  ingress.rs  job.rs  memory.rs  mod.rs  nation.rs  observe.rs  onboard.rs  output.rs  personal_agent.rs  provider.rs  queue.rs  quickstart.rs  recurring.rs  runtime.rs  schedule.rs  service.rs  session.rs  skill.rs  supervisor.rs  swarm.rs  wasm.rs
crates/loom-cli/tests/: auth.rs  breed.rs  connect.rs  deploy.rs  embodied_grpc_physical.rs  extension.rs  init_nation.rs  memory_graph.rs  observe.rs  personal_agent_supervision.rs  quickstart.rs  shadow_zk.rs  swarm_zk.rs
crates/loom-core/: Cargo.toml
crates/loom-core/src/: advanced_primitives.rs  agent_marketplace.rs  agent_runtime.rs  bindings.rs  capabilities.rs  capability_shims.rs  channels.rs  context_engine.rs  event_sourcing.rs  gateway_runtime.rs  lib.rs  memory_hybrid.rs  memory_service.rs  onboarding.rs  output_guard.rs  pipeline.rs  provider_auth_store.rs  provider_router.rs  recurring.rs  recurring_executor.rs  schedules.rs  service_ingress_runtime.rs  service_runtime.rs  session_policy.rs  session_provenance.rs  skill_lifecycle.rs  skills.rs  transport_contract.rs  wasm_host.rs  wasm_limits.rs  wasm_profiles.rs  wasm_runner.rs
crates/loom-core/tests/: wasm_host.rs
crates/loom-poge/: Cargo.toml
crates/loom-poge/src/: lib.rs  sp1.rs
crates/loom-shadow/: Cargo.toml
crates/loom-shadow/benches/: count_json_files.rs  load_events.rs
crates/loom-shadow/src/: event_schema.rs  lib.rs  lib.rs.orig  openclaw_seam.rs  policy_queue.rs  proof_views.rs  reservations.rs  scheduler_state.rs
deploy/systemd/: loom-user.service  loom.service
docs/: ARCHITECTURE.md  BENCHMARKS.md  COMMUNITY_MAP.md  CONFIG.md  FIRST_GOVERNED_CELL.md  INSTALL.md  LOOM_100_IMPROVEMENTS.md  MERIDIAN_PoGE_PROTOCOL.md  MIGRATE_FROM_CLAW.md  OPERATIONS.md  PRODUCT_TRUTH.md  PUBLICATION_CHECKLIST.md  QUICKSTART.md  RELEASE.md  RUN_LOCAL.md  SERVICE.md  SETUP_REHEARSAL.md
examples/: allow-execute-output.txt  bootstrap-output.txt  capability-forge-lifecycle-output.txt  capability-runtime-output.txt  claw-skill-import-output.txt  claw-skill-lifecycle-output.txt  claw-skill-multi-import-output.txt  claw-skill-service-output.txt  commitment-import-output.txt  first-governed-cell-output.txt  local-sanction-preview.txt  openclaw-plugin-import-output.txt  phase2-portability-corpus-manifest.json  rehearsal-output.txt  runtime-http-service-output.txt  runtime-service-output.txt  server-replacement-output.txt  supervisor-daemon-output.txt  supervisor-queue-output.txt  supervisor-watch-output.txt
profiles/: builder.toml  institution.toml  solo.toml  team.toml
scripts/: acceptance-full-system-lane.sh  acceptance_branding_lane.sh  acceptance_breed_lane.sh  acceptance_capability_service.sh  acceptance_connect_adapter_lane.sh  acceptance_connect_browser_lane.sh  acceptance_connect_c2_matrix_lane.sh  acceptance_connect_desktop_lane.sh  acceptance_connect_discord_lane.sh  acceptance_connect_ecosystem_lane.sh  acceptance_connect_email_lane.sh  acceptance_connect_failure_injection_lane.sh  acceptance_connect_lane.sh  acceptance_connect_security_lane.sh  acceptance_connect_shell_lane.sh  acceptance_connect_slack_lane.sh  acceptance_connect_telegram_lane.sh  acceptance_connect_webhook_lane.sh  acceptance_connect_whatsapp_lane.sh  acceptance_container_service.sh  acceptance_deploy_lane.sh  acceptance_embodied_physical_lane.sh  acceptance_extension_lane.sh  acceptance_init_nation_lane.sh  acceptance_local_service.sh  acceptance_memory_graph_lane.sh  acceptance_migration_profile_lane.sh  acceptance_observability_lane.sh  acceptance_observe_stream_lane.sh  acceptance_oss_dx_lane.sh  acceptance_quickstart_lane.sh  acceptance_security_auth_lane.sh  acceptance_shadow_embodied_zk.sh  acceptance_shadow_zk.sh  acceptance_shadow_zk_lane.sh  acceptance_swarm_zk_lane.sh  bench_runtime.py  bootstrap_embedded.sh  bootstrap_from_claw_profile.sh  check_publication_readiness.sh  (+28 more)
scripts/migration_tools/: rehearse_claw_skill_import.sh  rehearse_claw_skill_lifecycle.sh  rehearse_claw_skill_multi_import.sh  rehearse_claw_skill_service.sh  rehearse_legacy_plugin_import.sh  rehearse_openclaw_plugin_import.sh  rehearse_server_replacement.sh
scripts/tests/: rehearse_allow_execute.sh  rehearse_capability_forge_lifecycle.sh  rehearse_capability_runtime.sh  rehearse_first_governed_cell.sh  rehearse_local_sanction_preview.sh  rehearse_phase2_portability_corpus.sh  rehearse_runtime_http_service.sh  rehearse_runtime_service.sh  rehearse_setup.sh  rehearse_supervisor_daemon.sh  rehearse_supervisor_queue.sh  rehearse_supervisor_watch.sh
templates/connect/: README.md  browser.sample.json  desktop.sample.json  discord.sample.json  email.sample.json  shell.sample.json  slack.sample.json  telegram.sample.json  webhook.sample.json  whatsapp.sample.json
templates/extensions/: extension_contract_v1.sample.json
templates/personal-agent/: MEMORY.md  README.md  SOUL.md  agent.toml
