[package]
name = "loom-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Core config and contract surfaces for the Meridian Loom scaffold"
repository.workspace = true
homepage.workspace = true
keywords = ["meridian", "runtime", "governance"]
categories = ["command-line-utilities", "development-tools"]

[lib]
path = "src/lib.rs"

[dependencies]
loom-poge = { path = "../loom-poge" }
serde_json = "1"
ureq = "3.3.0"
url = "2.5.8"
wasmtime = { version = "14.0.4", default-features = false, features = ["cranelift", "pooling-allocator", "component-model"] }
wat = "1.245.1"
