[package]
name = "loom-shadow"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Shadow, decision, and parity rehearsal surfaces for Meridian Loom"
repository.workspace = true
homepage.workspace = true
keywords = ["meridian", "shadow", "runtime", "governance"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
loom-core = { path = "../loom-core" }
serde_json = "1"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[[bench]]
name = "load_events"
harness = false

[lib]
path = "src/lib.rs"
